feat:   - criptografando a senha.   - adicionado o README para version.   - adicionado security.
fix:
 - resolvido o bug da criação da company.

build:
 - Mudando a versão para 1.0.2

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>br.com.gntech</groupId>
     <artifactId>WS-GESTAO-VAGAS</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.2</version>
     <name>WS-GESTAO-VAGAS</name>
     <description>WS-GESTAO-VAGAS</description>
     <properties>
