--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,17 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+
+    <developers>
+        <developer>
+            <id>1</id>
+            <name>Pablo Junior</name>
+            <email>pablojuniorgn2@gmail.com</email>
+            <url>https://github.com/pablojg9</url>
+        </developer>
+
+    </developers>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
