--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/${postgres_db}
 spring.datasource.username=${username_db}
 spring.datasource.password=${password_db}
 spring.jpa.hibernate.ddl-auto=update
+
+#APENAS PARA DEMOSTRACAO.
+security.token.gntech.secret=GNTECH@005#
+security.token.gntech.secret.candidade=GNTECH@005#CANDIDATE
