feat: Criado a roles em relacao ao Candidate feat: Criado a criacao do profile Candidate feat: Criado no CandidateController o PreAuthorize para pegar a candidaturas de acordo ao token. build: Mudando a versao da api.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 #APENAS PARA DEMOSTRACAO.
 security.token.gntech.secret=GNTECH@005#
-security.token.gntech.secret.candidade=GNTECH@005#CANDIDATE
+security.token.gntech.secret.candidate=GNTECH@005#CANDIDATE
