test: created test integration in JobController with security and create application properties for test.
refactor: performing refactoring in source

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/${postgres_db}
-spring.datasource.username=${username_db}
-spring.datasource.password=${password_db}
+spring.datasource.url=jdbc:postgresql://localhost:5431/gestao-vagas-db
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 
 #APENAS PARA DEMOSTRACAO.
